# Signal2Action

./: .env.example  .gitignore  front_end.html  pyproject.toml  readme.md
2026-04-18-signal2action-an-agentic-consulting-system-that-2/: .env.example  .gitignore  README.md
2026-04-18-signal2action-an-agentic-consulting-system-that-2/backend/: requirements.txt
2026-04-18-signal2action-an-agentic-consulting-system-that-2/backend/app/: __init__.py  config.py  main.py  mock_data.py  schemas.py  workflow.py
2026-04-18-signal2action-an-agentic-consulting-system-that-2/backend/sample_data/: generated_demo_seed.json  mock_scenarios.json
2026-04-18-signal2action-an-agentic-consulting-system-that-2/frontend/: package-lock.json  package.json
Req_outputs/: comprehensive-consulting-requirements-for-multiple-client-initiatives.md  integrated-consulting-requirements-crm-rollout-supply-chain-optimization-organiz.md  sales-operations-assessment-and-crm-implementation-roadmap.md
examples/: crm_rollout_requirements.xlsx  customer_support_requirement.csv  market_entry_requirement.md  org_restructure_requirement.json  sample_requirement.txt  supply_chain_requirement.tsv  voice_requirement_sample.m4a  voice_requirement_script.txt
reqANA/: README.md  VOICERUN_MIC_TEST.md  __init__.py  agent.py  api.py  delivery.py  file_loader.py  google_drive_loader.py  models.py  transcription.py  voicerun_handler.py  voicerun_standalone_handler.py
reqANA/integrations/veris/: Dockerfile.sandbox.example  (+1 more)
scripts/: test_baseten_connection.py  test_baseten_openai_model.py  test_voicerun_text.py
(+17 files in other folders)
